# router/authRouter.go
@@ -7,7 +7,7 @@ import (
 
 type AuthRouter struct{}
 
-func (s *AuthRouter) GetAuthRouter(RouterPrt *gin.RouterGroup, RouterPub *gin.RouterGroup)  {
+func (s *AuthRouter) GetAuthRouter(RouterPrt *gin.RouterGroup, RouterPub *gin.RouterGroup) {
 	// 取使用者相關紀錄
 	NonAuthRouter := RouterPub.Group("auth")
 	AuthRouter := RouterPrt.Group("auth")
@@ -17,8 +17,9 @@ func (s *AuthRouter) GetAuthRouter(RouterPrt *gin.RouterGroup, RouterPub *gin.Ro
 
 	authApi := v1.ApiGroupApp.AuthApi
 	{
-		NonAuthRouter.POST("login", authApi.Login)               // 會員登入
-		NonAuthRouter.POST("register", authApi.Register)		// 會員註冊
-		AuthRouter.GET("refresh-token", authApi.RefreshToken)               
+		NonAuthRouter.POST("login", authApi.Login)            // 會員登入
+		NonAuthRouter.POST("register", authApi.Register)      // 會員註冊
+		AuthRouter.GET("refresh-token", authApi.RefreshToken) //刷新TOKEN
+		AuthRouter.GET("delete", authApi.DeleteUser)          //註銷會員
 	}
 }
